--- a/style.css
+++ b/style.css
@@ -1,4 +1,51 @@
-.main{
+:root {
+    --black: black;
+    --teal: teal;
+    --blue: blue;
+    --navy: navy;
+    --lime: lime;
+    --white: white;
+    --purple: purple;
+    --yellow: yellow;
+    --olive: olive;
+    --red: red;
+    --brown: brown;
+    --gray: gray;
+    --fuchsia: fuchsia;
+    --green: green;
+    --aqua: aqua;
+    --silver: silver;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url('background.jpeg');
+}
+
+main {
+    width: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+p {
+    display: block;
+    float: 2px;
+    margin: 2px;
+}
+
+h2 {
+    text-align: center;
+}
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.grid-box{
     display: grid;
     width:400px;
     margin: auto;
@@ -23,54 +70,81 @@
     grid-column-end: 7;
 }
 
+.colorname-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .green {
-    background-color: green;
+    background-color: var(--green);
+    color: var(--green);
 }
 
 .black {
-    background-color: black;
+    background-color: var(--black);
+    color: var(--black);
 }
 
 .teal {
-    background-color: teal;
+    background-color: var(--teal);
+    color: var(--teal);
 }
 
 .blue {
-    background-color: blue
+    background-color: var(--blue);
+    color: var(--blue);
 }
 
 .navy {
-    background-color: navy;
+    background-color: var(--navy);
+    color: var(--navy);
 }
 
 .lime {
-    background-color: lime;
+    background-color: var(--lime);
+    color: var(--lime);
 }
 
 .white {
-    background-color: white;
+    background-color: var(--white);
+    color: var(--white);
 }
 
 .purple {
-    background-color: purple;
+    background-color: var(--purple);
+    color: var(--purple);
 }
 
 .yellow {
-    background-color: yellow;
+    background-color: var(--yellow);
+    color: var(--yellow);
 }
 
 .olive {
-    background-color: olive;
+    background-color: var(--olive);
+    color: var(--olive);
 }
 
 .red {
-    background-color: red;
+    background-color: var(--red);
+    color: var(--red);
 }
 
 .gray {
-    background-color: gray;
+    background-color: var(--gray);
+    color: var(--gray);
 }
 
 .fuchsia {
-    background-color: fuchsia;
+    background-color: var(--fuchsia);
+    color: var(--fuchsia);
+}
+
+.black-text {
+    color: black;
+}
+
+.no-background {
+    background-color: transparent;
 }
